--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,7 +1,7 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: Go Build
+name: Go Build and Test
 
 on:
   push:
@@ -23,3 +23,16 @@ jobs:
 
     - name: Build
       run: go build -v ./...
+
+    - name: Test
+      run: go test -v ./...
+
+    - name: Update coverage report
+      uses: ncruces/go-coverage-report@v0
+      with:
+        report: true
+        chart: true
+        amend: true
+        reuese-go: true
+      if: github.event_name == 'push'
+      continue-on-error: true
